# NonlocalityOS

./: .env.template  .gitignore  Cargo.toml  astra.bat  clippy.bat  coverage.bat  coverage.sh  find_slow_tests.bat  fuzz.sh  install_cargo-run-bin.bat  install_cargo-run-bin.sh  readme.md  run_management_service.bat  rust-toolchain.toml  system_tests.sh  test.bat  watch_cargo_tests.bat  watch_cargo_tests.sh  watch_coverage.bat  watch_coverage.sh
.cargo/: config.toml
.github/actions/setup_sccache/: action.yml
.github/workflows/: rust.yml
astra/: Cargo.toml
astra/src/: main.rs
astraea/: Cargo.toml
astraea/benches/: storage_benchmarks.rs  tree_benchmarks.rs
astraea/src/: deep_tree.rs  deep_tree_tests.rs  delayed_hashed_tree.rs  delayed_hashed_tree_tests.rs  expressions.rs  in_memory_storage.rs  in_memory_storage_tests.rs  lib.rs  load_cache_storage.rs  sqlite_storage.rs  sqlite_storage_tests.rs  storage.rs  storage_benchmarks.rs  storage_test.rs  storage_tests.rs  tree.rs  tree_benchmarks.rs  tree_tests.rs  type_checking.rs  type_checking_tests.rs  types.rs
dogbox/dogbox_blob_layer/: Cargo.toml
dogbox/dogbox_dav_server/: Cargo.toml  THUMBNAIL_CACHING.md
dogbox/dogbox_dav_server/src/: file_system.rs  file_system_test.rs  file_system_tests.rs  lib.rs  lib_tests.rs  main.rs  main_test.rs
dogbox/dogbox_lambda_apis/src/: lib.rs  tests.rs
dogbox/dogbox_tree/: Cargo.toml
dogbox/dogbox_tree/src/: serialization.rs  serialization_tests.rs
dogbox/dogbox_tree_editor/: Cargo.toml
dogbox/dogbox_tree_editor/benches/: benchmarks.rs
dogbox/dogbox_tree_editor/src/: benchmarks.rs  lib.rs  lib_tests.rs  segmented_blob.rs  segmented_blob_tests.rs  sqlite.rs  sqlite_tests.rs  tests2.rs
dogbox/dropbox_importer/: Cargo.toml
dogbox/dropbox_importer/src/: dropbox_api.rs  dropbox_api_tests.rs  dropbox_content_hash.rs  dropbox_content_hash_tests.rs  file_cache.rs  file_cache_tests.rs  importer.rs  importer_tests.rs  lib.rs  lib_tests.rs
download_manager/: Cargo.toml
download_manager/src/: dropbox.rs  main.rs  main_tests.rs  telegram_bot.rs  telegram_bot_tests.rs  yt_dlp.rs
download_manager_frontend/: Cargo.toml  README.md  index.html
download_manager_frontend/src/: main.rs
download_manager_frontend/src/components/: app.rs
downloader_frontend/: Cargo.toml
downloader_frontend/src/: main.rs
example_applications/rust/: test.bat
example_applications/rust/tonic_rpc_server/: Cargo.toml  test.bat
example_applications/rust/tonic_rpc_server/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_functions/: Cargo.toml
fuzz/fuzz_functions/src/: lib.rs  prolly_tree_editable_node_insert.rs  prolly_tree_editable_node_remove.rs  prolly_tree_size_tracker.rs  segmented_blob.rs  sorted_tree_insert.rs  write_read_large_files.rs
fuzz/fuzz_targets/: segmented-blob.rs  write-read-large-files.rs
hello_llm/: Cargo.toml  README.md
hippeus_parser_generator/src/: lib_tests.rs
lambda/: Cargo.toml
lambda/src/: complex_expression_tests.rs  effect_tests.rs  evaluation_tests.rs  expressions.rs  expressions_tests.rs  hello_world_tests.rs  lib.rs  memory_byte_sink_tests.rs  standard_library.rs  type_checking.rs  types.rs
lambda_compiler/: Cargo.toml
lambda_compiler/src/: compilation_test.rs  evaluation_tests.rs  examples_test.rs  examples_tests.rs  format.rs  lib.rs  parsing.rs  parsing_test.rs  tokenization.rs  type_checking.rs  type_checking_test.rs  type_checking_tests.rs
management_service/: Cargo.toml
management_service/src/: main.rs
nonlocality_build_utils/: Cargo.toml
nonlocality_build_utils/src/: install.rs  podman.rs  raspberrypi.rs  run.rs
nonlocality_host/: Cargo.toml
nonlocality_host/src/: dav_server.rs  fake_operating_system.rs  main.rs
scripts/: install_bacon.bat  install_bacon.sh  install_cargo-nextest.bat  install_cargo-nextest.sh  install_cargo-tarpaulin.sh  install_sccache.bat  install_sccache.sh
sharded_storage/: Cargo.toml
sharded_storage/src/: lib.rs  sharded_storage.rs  sharded_storage_tests.rs
sorted_tree/src/: lib.rs  prolly_tree_editable_node.rs  prolly_tree_editable_node_tests.rs  sorted_tree.rs  sorted_tree_tests.rs
system_tests/: .env.template  Cargo.toml
system_tests/src/: dropbox_importer_tests.rs  main.rs
tools/: .gitignore
totp_example/: Cargo.toml
