[workspace]
members=[
    "astra",
    "nonlocality_build_utils",
    "astraea",
    "sorted_tree",
    "lambda",
    "lambda_compiler",
    "nonlocality_host",
    "hippeus_parser_generator",
    "totp_example",
    "download_manager",
    "dogbox/dogbox_tree",
    "dogbox/dogbox_tree_editor",
    "dogbox/dogbox_dav_server",
    "fuzz",
    "hello_llm",
]
resolver="2"

[profile.release]
panic = "abort"
# Try to keep the nonlocality_host binary small so that uploads are quick.
debug = false

# We don't strip because we want RUST_BACKTRACE to show names of functions.
# The default for strip is false according to the docs (https://doc.rust-lang.org/cargo/reference/profiles.html#strip).
# Strange observation: Setting strip to false explicitly makes the binaries larger than not setting strip at all.
#strip = false

# Reducing codegen-units to 1 reduces the nonlocality_host binary size from 1.2 MB to 1 MB.
# "By default, Cargo specifies 16 parallel codegen units for release builds. This improves compile times, but prevents some optimizations."
# https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#reduce-parallel-code-generation-units-to-increase-optimization
# 2026-02-22: commented out "codegen-units = 1" because release builds were really slow, and the default is much faster
#codegen-units = 1
