[package]
name = "astra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
ssh2 = "0"
dotenv = "0"
relative-path = "1"
nonlocality_build_utils = { path ="../nonlocality_build_utils" }
nonlocality_host = { path ="../nonlocality_host" }
astraea = { path ="../astraea" }
serde = {version = "1", features = ["alloc"]}
tempfile = "3"
tracing = "0"
tracing-subscriber = "0"
rusqlite = {version = "0", features = ["bundled"]}

[target.'cfg(target_env = "msvc")'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# https://github.com/madsim-rs/madsim
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = ["full"] }
