[package]
name = "download_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astraea = { path ="../astraea" }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time"]}
tracing = "0"
tracing-subscriber = "0"
rusqlite = {version = "0", features = ["bundled"]}

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
pretty_assertions = "1"
tempfile = "3"
