[package]
name = "nonlocality-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dogbox_tree = { path ="../dogbox/dogbox_tree" }
fuzz_functions = { path ="fuzz_functions" }
astraea = { path ="../astraea" }
tokio = { version = "1", features = ["full"] }
postcard = {version = "1", features = ["alloc"]}
tokio-macros = "2"
pretty_assertions = "1"

[[bin]]
name = "write-read-large-files"
path = "fuzz_targets/write-read-large-files.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lambda-compiler-parse"
path = "fuzz_targets/lambda-compiler-parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lambda-compiler-tokenize"
path = "fuzz_targets/lambda-compiler-tokenize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sorted-tree-insert"
path = "fuzz_targets/sorted-tree-insert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "prolly-tree-editable-node-insert"
path = "fuzz_targets/prolly-tree-editable-node-insert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "prolly-tree-editable-node-remove"
path = "fuzz_targets/prolly-tree-editable-node-remove.rs"
test = false
doc = false
bench = false

[[bin]]
name = "prolly-tree-size-tracker"
path = "fuzz_targets/prolly-tree-size-tracker.rs"
test = false
doc = false
bench = false
