[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
hippeus_parser_generator = { path = "../hippeus_parser_generator" }
astraea = { path = "../astraea" }
dogbox_tree = { path = "../dogbox/dogbox_tree" }
dogbox_tree_editor = { path = "../dogbox/dogbox_tree_editor" }
serde = "1"
postcard = {version = "1", features = ["alloc"]}
lazy_static = "1"
futures = "0"
bytes = "1"
async-trait = "0"
rusqlite = {version = "0", features = ["bundled"]}

[target.'cfg(target_env = "msvc")'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# https://github.com/madsim-rs/madsim
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = ["rt-multi-thread", "macros", "time", "sync"] }

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
