[package]
name = "lambda_compiler"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
hippeus_parser_generator = { path ="../hippeus_parser_generator" }
astraea = { path ="../astraea" }
lambda = { path ="../lambda" }
serde = "1"
postcard = {version = "1", features = ["alloc"]}
lazy_static = "1"
futures = "0"
bytes = "1"
rusqlite = {version = "0", features = ["bundled"]}

[target.'cfg(target_env = "msvc")'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# https://github.com/madsim-rs/madsim
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = ["rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
