[package]
name = "nonlocality_build_utils"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
curl = "0"
xz2 = "0"
tar = "0"
flate2 = "1"
tempfile = "3"
ssh2 = "0"
relative-path = "1"
fs_extra = "1"
futures-util = "0"
tracing = "0"

[target.'cfg(target_env = "msvc")'.dependencies]
tokio = { version = "1", features = ["process", "macros"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# https://github.com/madsim-rs/madsim
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = ["process", "macros"] }

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}

[target.'cfg(target_os = "linux")'.dependencies]
podman-api = "0"
uzers = "0"
