[package]
name = "nonlocality_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astraea = { path ="../astraea" }
lambda = { path ="../lambda" }
tracing = "0"
tracing-subscriber = "0"
tempfile = "3"

[target.'cfg(target_env = "msvc")'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# https://github.com/madsim-rs/madsim
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
