[package]
name = "sharded_storage"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
astraea = { path = "../astraea" }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "sync"]}
async-trait = "0"

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
