[package]
name = "dogbox_dav_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astraea = { path ="../../astraea" }
dogbox_tree_editor = { path ="../dogbox_tree_editor" }
dav-server = "0"
hyper = { version = "1", features = [ "http1", "http2", "server" ] }
hyper-util = { version = "*", features = [ "tokio" ] }
async-stream = "0"
bytes = "1"
tracing = "0"
tracing-subscriber = "0"
relative-path = "1"
futures = "0"
chrono = "0"
rusqlite = {version = "0", features = ["bundled"]}

[target.'cfg(target_env = "msvc")'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# https://github.com/madsim-rs/madsim
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = ["full"] }

[dev-dependencies]
reqwest_dav = "0"
test-log = {version = "0", features = ["trace", "log", "color"]}
tempfile = "3"
rand = { version = "0", features = [ "small_rng" ]}
pretty_assertions = "1"
