[package]
name = "dogbox_tree"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
astraea = { path ="../../astraea" }
serde = "1"
futures-core = "0"
futures-util = "0"
tokio-macros = "2"
async-trait = "0"
async-stream = "0"
postcard = {version = "1", features = ["alloc"]}

[target.'cfg(target_env = "msvc")'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# https://github.com/madsim-rs/madsim
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = ["full"] }

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
