[package]
name = "dogbox_tree_editor"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
astraea = { path ="../../astraea" }
dogbox_tree = { path ="../dogbox_tree" }
futures-core = "0"
relative-path = "1"
futures = "0"
async-stream = "0"
bytes = "1"
postcard = {version = "1", features = ["alloc"]}
tracing = "0"
lazy_static = "1"
async-trait = "0"
cached = "0"
rusqlite = {version = "0", features = ["bundled"]}

[target.'cfg(target_env = "msvc")'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
# https://github.com/madsim-rs/madsim
madsim = "0.2"
tokio = { version = "0.2", package = "madsim-tokio", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
rand = { version = "0", features = [ "small_rng" ]}
test-case = "3"
tracing-subscriber = "0"
test-log = {version = "0", features = ["trace", "log", "color"]}
