[package]
name = "dropbox_importer"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
astraea = { path ="../../astraea" }
dogbox_tree = { path ="../dogbox_tree" }
dogbox_tree_editor = { path ="../dogbox_tree_editor" }
sorted_tree = { path ="../../sorted_tree" }
dropbox-sdk = {version = "0", features = ["async_routes", "default_async_client"]}
tracing = "0"
futures = "0"
bytes = "1"
relative-path = "2"
async-trait = "0"
sha2 = "0"
hex = "0"
async-stream = "0"
tokio = {version = "1", features = ["sync"]}

[dev-dependencies]
test-case = "3"
test-log = {version = "0", features = ["trace", "log", "color"]}
pretty_assertions = "1"
hex-literal = "1"
